--- a/css/main.css
+++ b/css/main.css
@@ -219,9 +219,9 @@ address {
   width: 30px;
   height: 30px;
   display: flex;
+  align-items: center;
   justify-content: center;
   cursor: pointer;
-  align-items: center;
   border-radius: 50%;
   background-color: transparent;
   border: 1px solid rgba(0, 0, 0, 0.1);
@@ -525,8 +525,8 @@ address {
 }
 
 .about-us__suptitle {
-  font-weight: 700;
   font-size: 14px;
+  font-weight: 700;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
@@ -534,8 +534,8 @@ address {
 }
 
 .about-us__section-description {
-  font-weight: 400;
   font-size: 14px;
+  font-weight: 400;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color-theme-light);
@@ -859,5 +859,11 @@ address {
 
 .footer-subscribe__icon {
   margin-left: 10px;
+}
+
+.test {
+  width: 1440px;
+  height: 768px;
+  background-color: aqua;
 }
 /*# sourceMappingURL=main.css.map */
